# hyperion-chat_archives

./: CMakeLists.txt  README.md  build_and_run.bat  build_and_run.ps1  install_tools.bat  install_tools.sh  run_project.bat  wizard_install.bat  wizard_install.ps1
backend/: blacklist_hashes.json  watchdog.py
cmake/build8/: CMakeCache.txt
deploy/: package_mod.bat  package_mod.ps1
docs/cmake/: strings.md
docs/deploy/: README.md
docs/html/: index.html  packaging.html  profile.html
docs/legacy_web/: README.md
docs/markdown/deploy/: Deploy.md
docs/markdown/getting_started/: ProjectOverview.md
docs/markdown/packaging/: LinuxPackage.md  MacPackage.md  PackagingGuide.md  WindowsPackage.md
docs/packaging/: README.md
docs/templates/: community_template.css  community_template.php  community_template.ts
docs/webclip/: index.html
legacy_web/: dev.php  download_css.php  index.php
legacy_web/css/: dev.css
packaging/linux/: build_ligax_package.sh
packaging/macos/: build_ligax_dmg.sh
project_hyperion/: PROJECT_HISTORY.txt  README.md
project_hyperion/backend/: hwid_allowlist.json
project_hyperion/cmake/: CMakePresets.json
project_hyperion/lua/: demo.lua  ui.lua
project_hyperion/src/: errordialog.cpp  hwid_utils.cpp  main.cpp  mainwindow.cpp  media_buffer.cpp  media_buffer.h  profiledialog.cpp  profiledialog.h  secure_socket_client.cpp
project_hyperion/ui/: index.html
src/: errordialog.h  hwid_utils.h  mainwindow.h  md3_theme.cpp  md3_theme.h  resources.qrc  secure_socket_client.h  webbridge.cpp  webbridge.h
ui/: app.js  styles.css
(+19 files in other folders)
